workloads/postgresql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: postgresql
  name: postgresql
  namespace: mobydock
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: postgresql
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          value: yourpassword
        - name: POSTGRES_USER
          value: mobydock
        image: postgres:11.5
        name: postgresql
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgresql-data
      restartPolicy: Always
      volumes:
      - name: postgresql-data
        emptyDir: {}
status: {}
