workloads/mobydock-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mobydock
  name: mobydock
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    app: mobydock
status:
  loadBalancer: {}
