workloads/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    template.kubernetes.io/expose-uri: redis://{.spec.clusterIP}:{.spec.ports[?(.name=="redis")].port}
  creationTimestamp: null
  labels:
    app: redis-ephemeral
    template: redis-ephemeral-template
  name: redis
  namespace: mobydock
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis-ephemeral
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
